# QSlim

./: CMakeLists.txt  README.md  report.html
include/: zyMesh.h
include/camera_class/: camera.h
include/glad/: glad.h  gldebug.h
include/shader_class/: shader.h
include/shader_class/fs/: 1.colors-gouraud.fs  1.colors.fs  1.lightcube.fs  1.lightmap-spec-glow.fs  1.lightmap-spec.fs  1.lightmap.fs  1.materials.fs  1.model_loading-singleColor.fs  4.2.texture-alpha.fs  4.2.texture-reverse.fs  4.2.texture.fs  6.1.coordinate.fs  LightCaster-cluster.fs  LightCaster-parallel.fs  LightCaster-point.fs  MultiLights.fs
include/shader_class/vs/: 1.colors-gouraud.vs  1.colors.vs  1.lightMap.vs  1.materials.vs  1.model_loading.vs  3.3.shader-interpolate.vs  3.3.shader-xoffset.vs  6.1.coordinate.vs  MultiLights.vs
resource/: model_loading.fs
src/: glad.c  main.cpp
